# raytracing

./: .gitignore  CMakeLists.txt
src/: color.h  main.cpp  ray.h  vec3.h
